--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>My template</title>
   <meta name="description" content="My template">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.png">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -18,10 +18,14 @@
 </head>
 <body>
   <nav>
-    <a href="#" id="prev">PREV</a>
-    <a href="#" id="next">NEX</a>
+    <a href="#" id="prev">
+      <i class="fas fa-angle-left"></i>
+    </a>
+    <a href="#" id="next">
+      <i class="fas fa-angle-right"></i>
+    </a>
   </nav>
-  <main>
+  <main id="slideContainer">
     <article id="slide1"><h1>1</h1></article>
     <article id="slide2"><h1>2</h1></article>
     <article id="slide3"><h1>3</h1></article>
@@ -29,6 +33,7 @@
     <article id="slide5"><h1>5</h1></article>
   </main>
 <!-- scripts -->
-  <script src="js/script.js"></script>
+  <!-- <script src="js/script.js"></script> -->
+  <script src="js/test.js"></script>
 </body>
 </html>
